Added the correct data to the fields, Lobi Frank <3

--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -17,11 +17,9 @@
         <dt>E-mailadres:</dt>
         <dd>@Model.Email</dd>
         <dt>Sexuele Voorkeur:</dt>
-        <dd></dd>
+        <dd>@Model.Gender</dd>
         <dt>Locatie:</dt>
-        <dd></dd>
-        <dt>Wachtwoord:</dt>
-        <dd>
+        <dd>Not added yet.</dd>
             [
             @if (Model.HasPassword)
             {
