--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿html {
+
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -20,11 +24,15 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 400px;
 }
 
 .form-control {
-    border-radius: 0;
+    border-radius: 2px;
+}
+
+.form-horizontal {
+    max-width: 400px;
 }
 
 .field-validation-error {
@@ -35,3 +43,4 @@ textarea {
 .input-validation-error {
     border: 1px solid red;
 }
+
