--- a/Aphrodite/Aphrodite.Front/Views/Home/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Home/Index.cshtml
@@ -7,3 +7,10 @@
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
+<form action="" method="post" enctype="multipart/form-data">
+
+    <label for="file">Filename:</label>
+    <input type="file" name="file" id="file" />
+
+    <input type="submit" />
+</form>
