--- a/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
@@ -29,27 +29,20 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label>Ik ben een</label>
-                                    <select name="Gender" class="form-control">
-                                        <option value="0">Vrouw</option>
-                                        <option value="1">Man</option>
-                                    </select>
+                                    @Html.EnumDropDownListFor(m => m.Gender, new { @class = "form-control" })
                                 </div>
                                 <div class="col-xs-6">
-                                    <label>en ben</label>
-                                    <select name="SexualPreference" class="form-control">
-                                        <option value="0">Hetero</option>
-                                        <option value="1">Gay</option>
-                                        <option value="2">Bi-seksueel</option>
-                                    </select>
+                                    <label>en ben op zoek naar</label>
+                                    @Html.EnumDropDownListFor(m => m.Gender, new { @class = "form-control" })
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            @Html.ValidationMessageFor(m => m.UserName)
-                            @Html.LabelFor(m => m.UserName)
-                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Bijvoorbeeld: Frankie" })
+                            @Html.ValidationMessageFor(m => m.DisplayName)
+                            @Html.LabelFor(m => m.DisplayName)
+                            @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control", placeholder = "Bijvoorbeeld: Frankie" })
                         </div>
                     </div>
                     <div class="form-group">
