--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -13,30 +13,18 @@
     </div>
     <dl class="dl-horizontal">
         <dt>Voornaam:</dt>
-        <dd>@ViewBag.currentUser.UserName</dd>
+        <dd>@ViewBag.currentUser.DisplayName</dd>
         <dt>E-mailadres:</dt>
         <dd>@Model.Email</dd>
         <dt>Geslacht:</dt>
-        @if ( @ViewBag.currentUser.gender == 0)
-        {
-            <dd>Man</dd>
-        }
-        else
-        {
-            <dd>Vrouw</dd>
-        }
+        <dd>@ViewBag.currentUser.Gender</dd>
         <dt>Geboortedatum</dt>
         <dd>@ViewBag.currentUser.BirthDay</dd>
         <dt>Locatie:</dt>
         <dd>Not added yet.</dd>
-            }
-         }
         <dd>
             [
-            @if (Model.HasPassword)
-            {
                 @Html.ActionLink("Change your password", "ChangePassword")
-            }
             ]
             [
                 @Html.ActionLink("Change your other Data", "ChangeData")
