--- a/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
@@ -21,7 +21,6 @@
                 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-                    @Html.ValidationSummary()
                     <div class="col-xs-12">
                         <h2 class="register">@ViewBag.Title nu!</h2>
                         <h4>Maak een nieuw FaceDate account aan.</h4>
@@ -39,15 +38,18 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-xs-12">
-                            @Html.ValidationMessageFor(m => m.DisplayName)
+                        <div class="col-xs-12">                           
                             @Html.LabelFor(m => m.DisplayName)
+                            @Html.ValidationMessageFor(m => m.DisplayName)
                             @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control", placeholder = "Bijvoorbeeld: Frankie" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
                             @Html.LabelFor(m => m.BirthDay)
+                            @Html.ValidationMessageFor(m => m.BirthDayDay)
+                            @Html.ValidationMessageFor(m => m.BirthDayMonth)
+                            @Html.ValidationMessageFor(m => m.BirthDayYear)
                         </div>
                         <div class="col-xs-4">
                             @Html.TextBoxFor(m => m.BirthDayDay, new { @class = "form-control", placeholder = "DD", maxlength = "2", value = "" })
@@ -61,8 +63,8 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            @Html.ValidationMessageFor(m => m.Email)
                             @Html.LabelFor(m => m.Email)
+                            @Html.ValidationMessageFor(m => m.Email)
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "E-mailadres" })
                         </div>
                     </div>
