--- a/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="col-xs-6">
                                     <label>en ben op zoek naar</label>
-                                    @Html.EnumDropDownListFor(m => m.Gender, new { @class = "form-control" })
+                                    @Html.EnumDropDownListFor(m => m.SexualPreference, new { @class = "form-control" })
                                 </div>
                             </div>
                         </div>
