--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -8,9 +8,13 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <hr />
-    <div class="img-responsive">
+    @using (Html.BeginForm("Upload", "Manage", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
+    {
+        <label for="file">Filename:</label>
+        <input type="file" name="file" id="file" />
 
-    </div>
+        <input type="submit" />
+    }
     <dl class="dl-horizontal">
         <dt>Voornaam:</dt>
         <dd>@ViewBag.currentUser.DisplayName</dd>
