Added return to login page link on the register page

--- a/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Account/Register.cshtml
@@ -89,6 +89,7 @@
                     </div>
                 }
             </div>
+            @Html.ActionLink("Terug naar login", "Login", "Account")
         </div>
     </div>
     @section Scripts {
