Fixed the Date in the Manager

--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -23,7 +23,7 @@
         <dt>Geslacht:</dt>
         <dd>@ViewBag.currentUser.Gender</dd>
         <dt>Geboortedatum</dt>
-        <dd>@ViewBag.currentUser.BirthDay</dd>
+        <dd>@ViewBag.Date</dd>
         <dt>Locatie:</dt>
         <dd>Not added yet.</dd>
         <dd>
