--- a/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
@@ -2,7 +2,11 @@
 @{
     ViewBag.Title = "ChangeData";
 }
-
+<style>
+   label {
+       margin-right : 50px;
+   }
+</style>
 <h2>ChangeData</h2>
 
 
