--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -1,10 +1,14 @@
-﻿html {
-
-}
+﻿@import url(http://fonts.googleapis.com/css?family=Roboto);
 
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin: 0;
+    padding: 0;
+    background-color: #eaeaea;
+    font-family: 'Roboto', sans-serif;
+}
+
+body.fd-background-color {
+    background-color: #d34242;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -13,12 +17,52 @@ body {
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+/* Validation errors */
+
+.field-validation-error {
+    display: block;
+    width: 100%;
+    margin: 5px 0 5px 0;
+    padding: 5px;
+    color: #c23d3d;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.32) 0 2px 2px;
 }
+
+.validation-summary-errors ul {
+    display: block;
+    width: 100%;
+    margin: 5px 0 5px 0;
+    padding: 5px;
+    color: #c23d3d;
+    text-align: center;
+    list-style-type: none;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.32) 0 2px 2px;
+}
+
+.input-validation-error {
+    border-bottom: 2px solid #c23d3d;
+}
+
+/* Heads */
+
+hr {
+    border-bottom: 1px solid #ccc;
+}
+
+.h-tag-center {
+    text-align: center;
+}
+
+h4 {
+    color: #313131;
+}
+
+/* Input Fields */
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
@@ -27,22 +71,181 @@ textarea {
     max-width: 400px;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 .form-control {
-    border-radius: 2px;
+    height: 40px;
+    border-radius: 1px;
 }
 
-.form-horizontal {
-    max-width: 400px;
+.form-control option {
+    height: 40px;
 }
 
-.field-validation-error {
-    display: block;
+.txt-input {
     width: 100%;
+    height: 35px;
+    margin-top: 15px;
+    margin-bottom: 5px;
     padding: 5px;
-    color: #D8000C;
+    color: #fff;
+    font-size: 1.4em;
+    background-color: #d34242;
+    border: none;
+    border-bottom: 1px solid #fff;
 }
 
-.input-validation-error {
-    border: 1px solid #D8000C;
+/* Links */
+
+.footer-nav-link {
+    text-align: center;
 }
 
+.footer-nav-link a {
+    color: #fff;
+}
+
+.footer-nav-link.special a {
+    color: #858585;
+}
+
+/* Page header */
+
+.page-header {
+    height: 100px;
+    margin: 0;
+    background-color: #d34242;
+}
+
+/* Content Elements*/
+
+.body-content {
+    margin-top: 100px;
+}
+
+.row {
+    padding: 10px 0 10px 0;
+}
+
+h2, h3, h4 {
+    padding-bottom: 10px;
+    color: #727272;
+}
+
+.block {
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+.block h3 {
+    padding-bottom: 10px;
+    color: #727272;
+}
+
+.block p {
+    color: #727272;
+}
+
+.block .form-group {
+    margin: 0 0 5px 0;
+}
+
+.block .control-label {
+    color: #727272;
+    text-align: left;
+}
+
+/* Login page and Register page*/
+
+#login-form ::-webkit-input-placeholder { /* WebKit browsers */
+    color: #e3a3a3;
+}
+
+.login-btn {
+    width: 100%;
+    height: 35px;
+    margin: 10px 0 10px 0;
+    color: #fff;
+    background-color: #c23d3d;
+    border: none;
+}
+
+.reg-btn {
+    width: 100%;
+    height: 35px;
+    margin: 10px 0 10px 0;
+    color: #fff;
+    background-color: #c23d3d;
+    border: none;
+}
+
+#reg-form {
+    margin-top: 50px;
+}
+
+#reg-form label {
+    color: #858585;
+}
+
+.gender-left {
+    padding: 0 10px 0 0;
+}
+
+.pref-right {
+    padding: 0 0 0 10px;
+}
+
+.birthday-day {
+    padding: 0 10px 0 0;
+}
+
+.birthday-month {
+    padding: 0 10px 0 10px;
+}
+
+.birthday-year {
+    padding: 0 0 0 10px;
+}
+
+/* Navigation Bar */
+
+.navbar {
+    border: none;
+    background-color: #c23d3d;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
+
+.navbar-brand {
+    background: url(../Content/img/facedate_logo_normal.png) no-repeat top left;
+    display: block;
+}
+
+/* Manage page*/
+
+.nopadding {
+    padding: 0!important;
+    margin: 0!important;
+}
+
+.profile-image {
+    width: 320px;
+    height: 320px;
+    background-color: #212121;
+}
+
+a.edit-link {
+    display: block;
+    margin-top: 10px;
+    padding: 10px;
+    text-align: center;
+    color: #fff;
+    background-color: #c23d3d;
+}
