--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -6,33 +6,64 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <hr />
-    @using (Html.BeginForm("Upload", "Manage", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
-    {
-        <label for="file">Filename:</label>
-        <input type="file" name="file" id="file" />
+<div class="row">
+    <div class="col-sm-4 nopadding">
+        <div class="profile-image">
 
-        <input type="submit" />
-    }
-    <dl class="dl-horizontal">
-        <dt>Voornaam:</dt>
-        <dd>@ViewBag.currentUser.DisplayName</dd>
-        <dt>E-mailadres:</dt>
-        <dd>@Model.Email</dd>
-        <dt>Geslacht:</dt>
-        <dd>@ViewBag.currentUser.Gender</dd>
-        <dt>Geboortedatum</dt>
-        <dd>@ViewBag.currentUser.BirthDay</dd>
-        <dt>Locatie:</dt>
-        <dd>Not added yet.</dd>
-        <dd>
-            [
-                @Html.ActionLink("Change your password", "ChangePassword")
-            ]
-            [
-                @Html.ActionLink("Change your other Data", "ChangeData")
-            ]
-        </dd>
-    </dl>
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <div class="profile-edit-info">
+            @using (Html.BeginForm("Upload", "Manage", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
+            {
+                <label for="file">Filename:</label>
+                <input type="file" name="file" id="file" />
+
+                <input type="submit" />
+            }
+        </div>
+    </div>
 </div>
+
+<div class="row">
+<div class="block">
+   <div class="form-horizontal">
+       <div class="form-group">
+           <div class="col-sm-10">
+               <h3>Algemene info</h3>
+           </div>
+           <div class="col-sm-2">
+               @Html.ActionLink("Aanpassen", "ChangeData", "Manage", new { @class = "edit-link"})
+           </div>
+       </div>
+      <div class="form-group">
+         <label class="col-sm-2 control-label">Voornaam</label>
+          <div class="col-sm-10">
+             <p class="form-control-static">@ViewBag.currentUser.DisplayName</p>
+           </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">E-mailadres</label>
+            <div class="col-sm-10">
+                <p class="form-control-static">@Model.Email</p>
+            </div>
+        </div>
+       <div class="form-group">
+           <label class="col-sm-2 control-label">Geboortedatum</label>
+           <div class="col-sm-10">
+               <p class="form-control-static">@ViewBag.currentUser.BirthDay</p>
+           </div>
+       </div>
+       <div class="form-group">
+           <label class="col-sm-2 control-label">Geslacht</label>
+           <div class="col-sm-10">
+               <p class="form-control-static">@ViewBag.currentUser.Gender</p>
+           </div>
+       </div>
+    </div>
+</div>
+</div>
+<div class="row">
+        @Html.ActionLink("Verander wachtwoord", "ChangePassword")
+</div>
+
