--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-sm-4 nopadding">
         <div class="profile-image">
-
+            <img src="@Url.Content(@ViewBag.Photofile)" class="photosize" />
         </div>
     </div>
     <div class="col-sm-8">
