--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -3,13 +3,14 @@
     ViewBag.Title = "Profiel";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
+
 <div class="row">
     <div class="col-sm-4 nopadding">
         <div class="profile-image">
-            <img src="@Url.Content(@ViewBag.Photofile)" class="photosize" />
+            <img src="@Url.Content(Model.Photo)" class="photosize" />
         </div>
     </div>
     <div class="col-sm-8">
@@ -39,7 +40,7 @@
       <div class="form-group">
          <label class="col-sm-2 control-label">Voornaam</label>
           <div class="col-sm-10">
-             <p class="form-control-static">@ViewBag.currentUser.DisplayName</p>
+             <p class="form-control-static">@Model.User.DisplayName</p>
            </div>
         </div>
         <div class="form-group">
@@ -51,19 +52,19 @@
        <div class="form-group">
            <label class="col-sm-2 control-label">Geboortedatum</label>
            <div class="col-sm-10">
-               <p class="form-control-static">@ViewBag.Date</p>
+               <p class="form-control-static">@Model.BirthDay</p>
            </div>
        </div>
        <div class="form-group">
            <label class="col-sm-2 control-label">Geslacht</label>
            <div class="col-sm-10">
-               <p class="form-control-static">@ViewBag.currentUser.Gender</p>
+               <p class="form-control-static">@Model.User.Gender</p>
            </div>
        </div>
        <div class="form-group">
            <label class="col-sm-2 control-label">Sexuele voorkeur</label>
            <div class="col-sm-10">
-               <p class="form-control-static">@ViewBag.currentUser.SexualPreference</p>
+               <p class="form-control-static">@Model.User.SexualPreference</p>
            </div>
        </div>
     </div>
