--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -238,7 +238,7 @@ h2, h3, h4 {
 .profile-image {
     width: 320px;
     height: 320px;
-    background-color: #212121;
+    background-color: rgba(255,255,255,0);
 }
 
 .photosize {
