Back links and dutch text added

--- a/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
@@ -41,7 +41,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug naar je account", "Index")
 </div>
 
 @section Scripts {
