--- a/Aphrodite/Aphrodite.Front/Views/Manage/ChangePassword.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/ChangePassword.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+    <h4>Wachtwoord veranderen</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -25,6 +25,11 @@
             <input type="submit" value="Verander wachtwoord" class="reg-btn" />
     </div>
 }
+        <div class="form-group">
+            <div class="footer-nav-link special">
+                @Html.ActionLink("Terug naar je account", "Index", "Manage")
+            </div>
+        </div>
         </div>
 </div>
 
