--- a/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -29,8 +31,11 @@
                    
                 </ul>
                 @Html.Partial("_LoginPartial")
+                <ul class="nav navbar-nav navbar-right">
+                    <li><img class="avatar" src="@Url.Content(@ViewBag.photo)" /></li>
+                </ul>
             </div>
-        </div>
+        </div> 
     </div>
     <div class="container body-content">
         @RenderBody()
