added a profilepartial in the index for showing profiles

--- a/Aphrodite/Aphrodite.Front/Views/Home/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Aphrodite.Front.Models.ProfileViewModel
 @{
+ 
     ViewBag.Title = "FaceDate";
 }
 
-<div class="img-responsive">
+@Html.Partial("_ProfilePartial")
 
-</div>
+
+
+
