--- a/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,11 +29,8 @@
                    
                 </ul>
                 @Html.Partial("_LoginPartial")
-                <ul class="nav navbar-nav navbar-right">
-                    <li><img class="avatar" src="@Url.Content(@ViewBag.photo)" /></li>
-                </ul>
             </div>
-        </div> 
+        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
