Fixed bug on manage

--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -5,18 +5,18 @@
 
 <h2>@ViewBag.Title</h2>
 
-<p class="text-success">@ViewBag.StatusMessage</p>
+@if (ViewBag.StatusMessage != null)
+{
+    <p class="text-success">@ViewBag.StatusMessage</p>
+    
+}
 
 <div class="row">
     <div class="col-sm-4 nopadding">
         <div class="profile-image">
-
-            <img src="@Url.Content(@ViewBag.Photofile)" class="photosize" />
+            <img src="@Url.Content(Model.Photo)" class="photosize" />
            
          </div>
-
-
-            <img src="@Url.Content(Model.Photo)" class="photosize" />
         </div>
 
     </div>
@@ -31,7 +31,7 @@
             }
         </div>
     </div>
-</div>
+
 
 <div class="row">
 <div class="block">
