--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -241,6 +241,7 @@ h2, h3, h4 {
     background-color: rgba(255,255,255,0);
     position:relative;
     overflow:hidden;
+    margin: 0 auto;
 
 }
 
@@ -287,4 +288,31 @@ a.edit-link {
     background-color: #fff;
     border: 1px solid #ccc;
     text-align: center;
+}
+
+/* Facedate main*/
+
+#facedate_Dislike{
+    background: url('/Content/img/dislike_button.png') no-repeat center center;
+    background-size: 100% 100%;
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+    position: absolute;
+    left: -25px;
+}
+
+#facedate_Like{
+    background:url('/Content/img/like_button.png') no-repeat center center;
+    background-size: 100% 100%;
+    height:100px;
+    width:100px;
+    display: inline-block;
+    position: absolute;
+    right: -25px;
+}
+
+.like_box {
+    position: relative;
+    top: -60px;
 }
