--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -288,3 +288,24 @@ a.edit-link {
     border: 1px solid #ccc;
     text-align: center;
 }
+
+.modal-dialog {
+    width: 95%;
+    height: 95%;
+    border-radius: 3px;
+    box-shadow: rgba(0,0,0,0) 0px 0px inset;
+}
+
+.modal-header {
+    background-color: #ccc;
+}
+
+.modal-navigation {
+    position: relative;
+    padding: 15px;
+    border-bottom: 1px solid #ccc;
+}
+
+.facedate-image-upload {
+
+}
