--- a/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/ChangeData.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DisplayName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.DisplayName, htmlAttributes: new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.DisplayName, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DisplayName, "", new { @class = "text-danger" })
             </div>
         </div>
