--- a/Aphrodite/Aphrodite.Front/Views/Shared/_LoginPartial.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,9 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
+            @Html.ActionLink("Matches", "Index", "Match", routeValues: null, htmlAttributes: new { title = "Manage" })
+        </li>
+        <li>
             @Html.ActionLink("Instellingen", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Uitloggen</a></li>
