--- a/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
@@ -18,22 +18,9 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.ID</td>
-                    <td>@item.ReceiverId</td>
+                    <td>@item</td>
                 </tr>
             }
-            <tr>
-                <td>1</td>
-                <td>@ViewBag.Partner</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Debbie</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Sexy!</td>
-            </tr>
         </tbody>
     </table>
 </div>
